--- a/styleas1.css
+++ b/styleas1.css
@@ -1,7 +1,7 @@
 body{background-color: black;}
 h1{color: rgb(250, 210, 6);}
-
-
+h2{color: aliceblue;}
+h3{color: aqua;}
 
 
 .container{position: relative;
@@ -10,4 +10,27 @@ color: azure}
 .centered{position: absolute;
 top: 35%;
 left: 45%;
-text-shadow: violet;}
+text-shadow: violet;
+font-size: large;font-weight: bolder;font-family: 'Times New Roman', Times, serif;
+}
+.bottom-right{
+    position: absolute;
+    bottom: 150px;
+    right: 250px;
+}
+.link-button{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color: rgb(142, 45, 232); background-color: rgb(255, 174, 237); padding: 10px 30px; text-decoration: none; background-image: linear-gradient(violet pink); font-weight: 700;
+border-radius: 100%;}
+
+.centered1{text-align: center;}
+.container2{text-align: center; font-weight: 900;}
+.flexible-container{ display: flex;margin-bottom: 150px; margin-right: 250px;}
+.conatainer3{text-align: center;}
+.pink-button{color: rgb(230, 36, 142);}
+.plan{ box-shadow: 10px 10px 40px aqua;
+ width: 50%; margin-left: 2%; margin-right: 2%; padding-left: 5%; padding-right: 5%; border-radius: 140px; border-left: 20px rgb(237, 177, 23) }
+ #food{border-right: 10px solid rgb(237, 190, 19);}
+ #shelter{border-right: 10px solid rgb(237, 190, 19);}
+ #baby{border-right: 10px solid rgb(237, 190, 19);}
+ #medicine{border-right: 10px solid rgb(237, 190, 19);}
+ #planlist{border-right: 10px solid rgb(237, 190, 19);}
