--- a/styleas1.css
+++ b/styleas1.css
@@ -34,3 +34,9 @@ border-radius: 100%;}
  #baby{border-right: 10px solid rgb(237, 190, 19);}
  #medicine{border-right: 10px solid rgb(237, 190, 19);}
  #planlist{border-right: 10px solid rgb(237, 190, 19);}
+
+ .flexible-container1{display:flex; margin-bottom: 150px; margin-left: 160px;}
+ .half-width{ width:50%; padding-left:2%; padding-right: 5%;}
+.half-width img{ width:90%; padding-left: 0%; padding-top: 20%;}
+.half-width2{width: 50%;padding-right:8% ;}
+.half-width2 img{width: 90%;padding-right: 10%;padding-top: 20%;}
