--- a/styleas1.css
+++ b/styleas1.css
@@ -1,5 +1,5 @@
 body{background-color: black;}
-h1{color: rgb(250, 210, 6);}
+h1{color: rgb(253, 224, 83);}
 h2{color: aliceblue;}
 h3{color: aqua;}
 
@@ -40,3 +40,5 @@ border-radius: 100%;}
 .half-width img{ width:90%; padding-left: 0%; padding-top: 20%;}
 .half-width2{width: 50%;padding-right:8% ;}
 .half-width2 img{width: 90%;padding-right: 10%;padding-top: 20%;}
+.flexible-container2{display: flex; margin-left:480px ;}
+#flexible-container2{display: flex; margin-left: 45%;}
