--- a/styleas1.css
+++ b/styleas1.css
@@ -20,7 +20,8 @@ font-size: large;font-weight: bolder;font-family: 'Times New Roman', Times, seri
 }
 .link-button{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 color: rgb(240, 240, 49); background-color: rgb(46, 209, 214); padding: 10px 10px; text-decoration: none; background-image: linear-gradient(rgb(130, 238, 236) rgb(205, 233, 240)); font-weight: 900;
-border-radius: 0%;}
+border-radius: 45%;}
+.subscribe{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;background-color: rgb(47, 219, 222);color: rgb(0, 0, 0); font-weight: 900;}
 
 .centered1{text-align: center;}
 .container2{text-align: center; font-weight: 900;}
